@@ -79,6 +79,12 @@ Changes from 2.8.0 to 2.8.1
   resolves to several addresses (and would only listen on the first hit,
   as it did before in such cases) [#2012]
 
+- A definitive behavior for `LISTEN *` directives became specified, to try
+  handling both IPv4 and IPv6 "any" address (subject to `upsd` CLI options
+  to only choose one, and to OS abilities); this use-case may be practically
+  implemented as a single IPv6 socket on systems with enabled "dual-stack"
+  support or as two separate listening sockets [#2012]
+
 - Added support for `make sockdebug` for easier developer access to the tool;
   also if `configure --with-dev` is in effect, it would now be installed to
   the configured `libexec` location. A man page was also added. [#1936]
